volexc/tests/ui/parse_missing_colon.out
Error: found "u32" but expected one of ":", "?"
   ╭─[parse_missing_colon.vol:3:9]
   │
 3 │     bar u32
   │         ─┬─  
   │          ╰─── Unexpected 'u32'
   │ 
   │ Note: Expected one of: ':', '?'
───╯