volexc/tests/ui/parse_missing_colon.vol
// Missing colon in struct field
struct Foo {
    bar u32
}
